Prueba2_P2_2020/GrammarManual.txt
Grammar
=======

input -> stmt_list

stmt_list -> stmt stmt_listP
stmt_listP -> stmt ; stmt_listP
        | %eps


stmt -> IDENT assign
        | PRINT expr
        | %eps


assign -> = expr
        | (arg) = expr

arg -> NUMBER
      | IDENT

expr -> term exprP
exprP -> + term exprP
        |- term exprP
        | %eps

term -> factor termP
termP -> * factor termP
        | %eps

factor -> IDENT
        | NUMBER
        | ( expr )
